--- a/manuscript/CI_interactions.tex
+++ b/manuscript/CI_interactions.tex
@@ -305,24 +305,24 @@ Link\"{o}ping, Sweden\\
        int\_probs = c(0.358, 0.110, 0.055, 0.082, 0.468, 0.165, 0.055, 0.412, 0.028, 0.028) }.
       \vspace{12pt}
 
-    The mean of these interaction probabilities is 0.176, approximately two-thirds the $\lambda_{MLE}$ obtained from the observed data. We can use the distribution of these interaction probabilities as our prior distribution and estimate the uncertainty surrounding our $\lambda_{MLE}$. With some simple R code (function ``calculate\_parameters", \emph{Appendix S2}), we obtain prior parameters $\alpha$=0.998 and $\beta$=4.63. Using these priors in equations~\ref{mean} and~\ref{variance} above (or in the R function ``calculate\_distribution" in \emph{Appendix S2}), we find a prior $\bar\lambda$=0.177 and var($\lambda$)=0.026. Adding the observed data ($n=10$, $k=3$) and using the same code, we obtain posterior parameters $\alpha'$=4.00 and $\beta'$=11.6 and a posterior $\bar\lambda$=0.256 and var($\lambda$)=0.012. Comparing the posterior distribution to the prior, we see that the posterior is closer to the observed data and that the additional data about interactions between species $i$ and $j$ has reduced the variance. We may also wish to calculate a credible interval (analogous to the frequentist confidence interval). This is also quite straightforward in R (see function ``credible\_interval" in \emph{Appendix S2}). In this case, a 95\% credible interval for $\bar\lambda$ is (0.080, 0.491).
+    The mean of these interaction probabilities is 0.176, approximately two-thirds the $\lambda_{MLE}$ obtained from the observed data. We can use the distribution of these interaction probabilities as our prior distribution and estimate the uncertainty surrounding our $\lambda_{MLE}$. With some simple R code (function ``calculate\_parameters", \emph{Appendix S1}), we obtain prior parameters $\alpha$=0.998 and $\beta$=4.63. Using these priors in equations~\ref{mean} and~\ref{variance} above (or in the R function ``calculate\_distribution" in \emph{Appendix S1}), we find a prior $\bar\lambda$=0.177 and var($\lambda$)=0.026. Adding the observed data ($n=10$, $k=3$) and using the same code, we obtain posterior parameters $\alpha'$=4.00 and $\beta'$=11.6 and a posterior $\bar\lambda$=0.256 and var($\lambda$)=0.012. Comparing the posterior distribution to the prior, we see that the posterior is closer to the observed data and that the additional data about interactions between species $i$ and $j$ has reduced the variance. We may also wish to calculate a credible interval (analogous to the frequentist confidence interval). This is also quite straightforward in R (see function ``credible\_interval" in \emph{Appendix S1}). In this case, a 95\% credible interval for $\bar\lambda$ is (0.080, 0.491).
 
 
-    Now, consider the case where the two species have never been observed interacting across $n$ trials, i-e. $k=0$. The question is then ``what is the probability that these two species do not interact''? Since it is not possible to prove that the two species could never interact (strictly speaking, in a Bayesian approach $\lambda=0$ is impossible), we must fix a threshold below which we consider that there is no interaction ($\lambda \sim 0$). We call this threshold probability $\lambda*$. We then use the cumulative distribution function to estimate $P(\lambda<\lambda*|L=0,n)$ for different $n$. The function ``plot\_precision" in \emph{Appendix S2} calculates distribution function for $\lambda*$ with an increasing number of trials. This yields a surprising result: it requires \textgreater24 observations of no interactions to be 95\% sure that the interaction probability is smaller than $\lambda*$=0.1 (recall Fig.~\ref{upper_limits}, Box~\ref{box2}). Note the special case where there is no observation of the two species co-occurring, $n = 0$.  In this situation, the posterior distribution converges to the prior distribution since the data include no information on the probability with which species might interact should they co-occur.
+    Now, consider the case where the two species have never been observed interacting across $n$ trials, i-e. $k=0$. The question is then ``what is the probability that these two species do not interact''? Since it is not possible to prove that the two species could never interact (strictly speaking, in a Bayesian approach $\lambda=0$ is impossible), we must fix a threshold below which we consider that there is no interaction ($\lambda \sim 0$). We call this threshold probability $\lambda*$. We then use the cumulative distribution function to estimate $P(\lambda<\lambda*|L=0,n)$ for different $n$. The function ``samples\_for\_threshold" in \emph{Appendix S1} calculates distribution function for $\lambda*$ with an increasing number of trials. This yields a surprising result: it requires \textgreater24 observations of no interactions to be 95\% sure that the interaction probability is smaller than $\lambda*$=0.1 (recall Fig.~\ref{upper_limits}, Box~\ref{box2}). Note the special case where there is no observation of the two species co-occurring, $n = 0$.  In this situation, the posterior distribution converges to the prior distribution since the data include no information on the probability with which species might interact should they co-occur.
 
 
 \section*{Scaling up uncertainty from pairwise interactions to networks}
 
-    It is fairly straightforward to compute most of network metrics when the different $\lambda$ of the adjacency matrix are known, without variance~\citep{Poisot2016}. Several of these metrics derive directly from quantitative indices of network structure which are equivalent to $\lambda$. The remainder, originally defined for binary networks, can be adjusted to account for interaction probabilities between zero and one. It is not as easy, however, to understand how the uncertainty in these estimated interaction probabilities influences network metrics. Computation of these metrics involves non-linear functions. Since Jensen's inequality states that the average of a non-linear function of a stochastic variable differs from the function of the average of that variable, any uncertainty in the values of $\lambda$ could bias both the mean and variance of a network metric. For instance, assume that among the pairs of species with few observed co-occurrences there are many pairs which truly interact. If we begin with no observed links for these pairs, then correcting for these false absences will inflate the number of links and consequently influence metrics such as connectance, nestedness, and degree distribution. While we can, as described above, calculate these network metrics using fixed estimates for $\lambda$, no analytical solution currently exists for uncertain $\lambda$. Instead we must rely on computer simulations. In the following section, we will provide an empirical example based on the well-sampled system of \emph{Salix}  plants, herbivorous gallers, and their natural enemies described by~\citet{Kopelke2017}; see Box~\ref{box1} for a description). This tripartite network can be examined as two bipartite networks, namely \emph{Salix}-galler and galler-natural enemy networks. We will show how the uncertainty arising from both absences of co-occurrences and false absences of interactions impact these metrics. %We find uncertainty influences both the average and the variance of network metrics, putting in perspective traditional network comparison studies where these metrics are assumed to be fixed entities. 
+    It is fairly straightforward to compute most of network metrics when the different $\lambda$ of the adjacency matrix are known, without variance~\citep{Poisot2016}. Several of these metrics derive directly from quantitative indices of network structure which are equivalent to $\lambda$. The remainder, originally defined for binary networks, can be adjusted to account for interaction probabilities between zero and one. It is not as easy, however, to understand how the uncertainty in these estimated interaction probabilities influences network metrics. Computation of these metrics involves non-linear functions. Since Jensen's inequality states that the average of a non-linear function of a stochastic variable differs from the function of the average of that variable, any uncertainty in the values of $\lambda$ could bias both the mean and variance of a network metric. For instance, assume that among the pairs of species with few observed co-occurrences there are many pairs which truly interact. If we begin with no observed links for these pairs, then correcting for these false absences will inflate the number of links and consequently influence metrics such as connectance, nestedness, and degree distribution. While we can, as described above, calculate these network metrics using fixed estimates for $\lambda$, no analytical solution currently exists for uncertain $\lambda$. Instead we must rely on computer simulations. In the following section, we will provide an empirical example based on the well-sampled system of \emph{Salix}  plants, herbivorous gallers, and their natural enemies described by~\citet{Kopelke2017}; see Box~\ref{box1} or \emph{Appendix S2} for a description). This tripartite network can be examined as two bipartite networks, namely \emph{Salix}-galler and galler-natural enemy networks. We will show how the uncertainty arising from both absences of co-occurrences and false absences of interactions impact these metrics. %We find uncertainty influences both the average and the variance of network metrics, putting in perspective traditional network comparison studies where these metrics are assumed to be fixed entities. 
 
 
 
   \subsection*{Computing the posterior distribution}
 
-      In a strict Bayesian framework, we wish to use a prior distribution that does not rely on any information from the study at hand. To that end, we use data from another well-described system of \emph{Salix}, gallers, and natural enemies~\citep{Barbour2016,Barbour2016Dryad}. We note that this study used several genotypes of \emph{Salix hookeriana} rather than different \emph{Salix} species, but stress that this difference is unlikely to be critical for our purposes. Our interest is specifically in what information can be gained from the extensive sampling of \emph{Salix}, gallers, and natural enemies across Europe; the similar but much smaller system in the United States is merely a starting point from which to obtain somewhat reasonable priors. To obtain these priors, we estimated frequencies of  \emph{S. hookeriana} genotype-galler interactions based on the normalised degree of each species in each network component (see \emph{Appendix S1} for details and code). Specifically, we obtain prior parameters $\alpha$=2.51 and $\beta$=1.89. For the galler-natural enemy component of the network, the corresponding prior parameters are $\alpha$=1.34, $\beta$=9.49. We are then able to use these prior parameters to estimate the posterior distribution of interaction probabilities given the additional information in our dataset.
+      In a strict Bayesian framework, we wish to use a prior distribution that does not rely on any information from the study at hand. To that end, we use data from another well-described system of \emph{Salix}, gallers, and natural enemies~\citep{Barbour2016,Barbour2016Dryad}. We note that this study used several genotypes of \emph{Salix hookeriana} rather than different \emph{Salix} species, but stress that this difference is unlikely to be critical for our purposes. Our interest is specifically in what information can be gained from the extensive sampling of \emph{Salix}, gallers, and natural enemies across Europe; the similar but much smaller system in the United States is merely a starting point from which to obtain somewhat reasonable priors. To obtain these priors, we estimated frequencies of  \emph{S. hookeriana} genotype-galler interactions based on the normalised degree of each species in each network component (see \emph{Appendix S3} for details and code). Specifically, we obtain prior parameters $\alpha$=2.51 and $\beta$=1.89. For the galler-natural enemy component of the network, the corresponding prior parameters are $\alpha$=1.34, $\beta$=9.49. We are then able to use these prior parameters to estimate the posterior distribution of interaction probabilities given the additional information in our dataset.
   
 
-      For species where no co-occurrences were observed ($n=0$), we can calculate the estimates for the mean and variance of $\lambda_{ij}$ directly from the prior parameters following equations~\ref{mean} and~\ref{variance} (see \emph{Appendix S2} for R implementation). For the \emph{Salix}-galler network, the prior distribution we obtained was: $\bar\lambda$=0.570, var($\lambda$)=0.056. The prior distribution for the galler-natural enemy network was $\bar\lambda$=0.124, var($\lambda$)=0.010. This is consistent with the prior data, where the average interaction probability based on the degree distributions of \emph{Salix} genotypes and gallers was 0.562 and that for gallers and natural enemies was 0.122. These probabilities are much higher than those in our dataset (0.028 and 0.078 for the \emph{Salix}-galler and galler-natural enemy networks, respectively) - a discrepancy which may reflect the differences in scale between the network containing different genotypes of a single \emph{Salix} species and four gallers from a single family in~\citet{Barbour2016} and the extensive network of~\citet{Kopelke2017} which contains tens of \emph{Salix}, galler, and natural enemy species, with the insects representing many different families.
+      For species where no co-occurrences were observed ($n=0$), we can calculate the estimates for the mean and variance of $\lambda_{ij}$ directly from the prior parameters following equations~\ref{mean} and~\ref{variance} (see \emph{Appendix S1} for R implementation). For the \emph{Salix}-galler network, the prior distribution we obtained was: $\bar\lambda$=0.570, var($\lambda$)=0.056. The prior distribution for the galler-natural enemy network was $\bar\lambda$=0.124, var($\lambda$)=0.010. This is consistent with the prior data, where the average interaction probability based on the degree distributions of \emph{Salix} genotypes and gallers was 0.562 and that for gallers and natural enemies was 0.122. These probabilities are much higher than those in our dataset (0.028 and 0.078 for the \emph{Salix}-galler and galler-natural enemy networks, respectively) - a discrepancy which may reflect the differences in scale between the network containing different genotypes of a single \emph{Salix} species and four gallers from a single family in~\citet{Barbour2016} and the extensive network of~\citet{Kopelke2017} which contains tens of \emph{Salix}, galler, and natural enemy species, with the insects representing many different families.
 
 
       For a pair of species with some observed co-occurrences ($n>0$), we can update the prior distribution with these data. If we consider only pairs of species which were observed to co-occur but not to interact, $k_{ij}$ is always 0 and only $n_{ij}$ will vary between species pairs, giving $\alpha'$=$\alpha$ and $\beta'$=$\beta + n$. As the most extreme case, for a pair of species which co-occurred at all 374 sites and was never observed to interact, our distributions would become 
@@ -378,7 +378,7 @@ Link\"{o}ping, Sweden\\
 
   \subsection*{How many samples are required to reach a minimal precision}
 
-      Rather than calculating credible intervals for a posterior distribution after collecting data, we may wish to know how many data points are necessary to obtain a given level of confidence that two co-occurring species do not interact. The number of samples needed will depend on both our desired level of confidence and the threshold below which we assume that two species are unlikely to ever interact. If we want to be 95\% confident that the interaction probability for two species in the \emph{Salix}-galler network is below 0.1, 0.05, or 0.01, we would need 51, 106, and 550 observed co-occurrences with no observed interaction (Fig.~\ref{Salix_cdfs}; see function plot\_precision in~\emph{Appendix S2}). Although the prior distribution of interaction probabilities is narrower and closer to zero for the galler-natural enemy network, the number of samples required to be 95\% confident that the interaction probability is below a threshold still increases quickly; we would need 25, 62, and 352 observed co-occurrence with no observed interaction for threshold interaction probabilities of 0.1, 0.05, and 0.01, respectively. Given the low levels of replication in most network studies, this implies that we should have fairly low confidence in many ``non-interacting" pairs of species. Even in the extensively replicated \emph{Salix}-galler-natural enemy dataset very few species pairs were observed co-occurring frequently enough to reach these thresholds. In fact, only three \emph{Salix}-galler pairs and 31 pairs of gallers and their natural enemies were observed co-occurring frequently enough to reach the threshold for an interaction probability of 0.1. No pairs were observed to co-occur frequently enough to reach the threshold for an interaction probability of 0.01. Discounting potential interactions, then, requires either a stronger prior expectation of no interaction (e.g., we can be highly confident that a palm tree will not predate upon a leopard no matter how many times the two species are observed together) or very extensive sampling. For all we know, most links absent from current descriptions of network structure may be so not because the species do not interact, but because we have not sampled deeply enough to detect them.
+      Rather than calculating credible intervals for a posterior distribution after collecting data, we may wish to know how many data points are necessary to obtain a given level of confidence that two co-occurring species do not interact. The number of samples needed will depend on both our desired level of confidence and the threshold below which we assume that two species are unlikely to ever interact. If we want to be 95\% confident that the interaction probability for two species in the \emph{Salix}-galler network is below 0.1, 0.05, or 0.01, we would need 51, 106, and 550 observed co-occurrences with no observed interaction (Fig.~\ref{Salix_cdfs}; see function samples\_for\_threshold in~\emph{Appendix S1}). Although the prior distribution of interaction probabilities is narrower and closer to zero for the galler-natural enemy network, the number of samples required to be 95\% confident that the interaction probability is below a threshold still increases quickly; we would need 25, 62, and 352 observed co-occurrence with no observed interaction for threshold interaction probabilities of 0.1, 0.05, and 0.01, respectively. Given the low levels of replication in most network studies, this implies that we should have fairly low confidence in many ``non-interacting" pairs of species. Even in the extensively replicated \emph{Salix}-galler-natural enemy dataset very few species pairs were observed co-occurring frequently enough to reach these thresholds. In fact, only three \emph{Salix}-galler pairs and 31 pairs of gallers and their natural enemies were observed co-occurring frequently enough to reach the threshold for an interaction probability of 0.1. No pairs were observed to co-occur frequently enough to reach the threshold for an interaction probability of 0.01. Discounting potential interactions, then, requires either a stronger prior expectation of no interaction (e.g., we can be highly confident that a palm tree will not predate upon a leopard no matter how many times the two species are observed together) or very extensive sampling. For all we know, most links absent from current descriptions of network structure may be so not because the species do not interact, but because we have not sampled deeply enough to detect them.
 
 
   \subsection*{Scaling up to network metrics}
@@ -412,7 +412,7 @@ Link\"{o}ping, Sweden\\
 
 \begin{floatbox}{}
 
-    \indent As a case study, we use an extensively sampled \emph{Salix}-galler-natural enemy meta-network. This dataset consists of a single community type sampled across Europe; willow (\emph{Salix}) species, willow-galling sawflies, and their natural enemies. The data were collected over 29 years at 374 unique locations across Europe, with a total of 641 site visits. Each site visit can be considered as a network in its own right or as an independent sample from which to build the meta-network. The meta-network consists of 1,173 different interactions between 52 \emph{Salix} nodes, 92 herbivore nodes, and 126 natural enemy nodes. The high spatiotemporal resolution of this network and the unusually high sampling effort implemented at the site level makes this dataset particularly well suited for illustrating the difficulties in completely sampling a network and testing Bayesian approaches to overcome these difficulties.\\
+    \indent As a case study, we use an extensively sampled \emph{Salix}-galler-natural enemy meta-network. This dataset consists of a single community type sampled across Europe: willow (\emph{Salix}) species, willow-galling sawflies, and their natural enemies. The data were collected over 29 years at 374 unique locations across Europe, with a total of 641 site visits. Each site visit can be considered as a network in its own right or as an independent sample from which to build the meta-network. The meta-network consists of 1,173 different interactions between 52 \emph{Salix} nodes, 92 herbivore nodes, and 126 natural enemy nodes. The high spatiotemporal resolution of this network and the unusually high sampling effort implemented at the site level makes this dataset particularly well suited for illustrating the difficulties in completely sampling a network and testing Bayesian approaches to overcome these difficulties.\\
     \indent We may begin by comparing the frequency of co-occurences for pairs of species in each part of the network to reveal the challenge of having sufficient sampling to be confident that an interaction does not occur. Most pairs of species (3986/4992 \emph{Salix}-galler pairs and  9794/12096 galler-natural enemy pairs) are never found co-occurring and, even for species that did occur, the total number of co-occurrences was generally low (mean=4.24, variance=36.3 for \emph{Salix}-galler pairs; mean=3.87, variance=28.8 for galler-natural enemy pairs; Fig.~\ref{histograms}A-B). The bulk of these co-occurring species pairs were never observed to interact: only 2.82\% of \emph{Salix}-galler pairs and 7.76\% of galler-natural enemy pairs were observed interacting at one or more sites. Of those pairs that did interact, the incidence of interaction was also low (mean=12.0, variance=155 for \emph{Salix}-galler pairs; mean=4.04, variance=29.3 for galler-natural enemy pairs; Fig.~\ref{histograms}C-D). Thus, even in the most extensive data set that we could find, there was very little empirical data for each species pair. This suggests that limited sampling is a major source of uncertainty. This dataset also illustrates the potential for increased sampling to not necessarily reveal more interactions as a pair of species that interacts in some cases may not be observed interacting in all cases (Fig.~\ref{histograms}E-F).
   \caption{\emph{Salix} dataset}
   \label{box1}
@@ -420,10 +420,45 @@ Link\"{o}ping, Sweden\\
 
 
 \begin{floatbox}{}
+  
+  Here we describe the derivation of the Clopper-Pearson credible interval for the estimated probability of interaction $\lambda$ of a pair of species observed co-occurring $n$ times and interacting $k$ times. As we are most interested in the probability of interaction between species pairs that have never been observed co-occurring, we consider only the case where $k=0$ over a variety of $n$. This is straightforward to do in R (see the function ``credible\_interval" in \emph{Appendix S1}). 
 
-  This yields a surprising result: it requires \textgreater24 observations of no interactions to be 95\% sure that the interaction probability is smaller than $\lambda*$=0.1 (recall Fig.~\ref{upper_limits}, Box~\ref{box2}).
-   In Fig.~\ref{upper_limits} and Box~\ref{box2}, we derive the Clopper-Pearson interval to explore how the estimate of $\lambda$ varies with sample size. At a small sample size, the 95\% credibleinterval spans all values of $\lambda$.
-  \caption{Here we derive the Clopper-Pearson credible interval for the estimated probability of interaction $\lambda$ of a pair of species observed co-occurring $n$ times and interacting $k$ times. As we are most interested in the probability of interaction between species pairs that have never been observed co-occurring, we consider only the case where $k=0$ over a variety of $n$.}
+
+  First, we must obtain the $\alpha$ and $\beta$ parameters for the prior distribution. In this study we obtained these parameters using the R~\citep{R} function fitdispr from the package MASS~\citep{MASS}. Once $\alpha$ and $\beta$ are known, we can update them using our observed data. Specifically, we are interested in $\alpha'=\alpha+k$ and $\beta'=\beta+n-k$. These parameters can then be used to calculate a credible interval using the R~\citep{R} function qbeta. In the table below, we present the 95\% credible intervals for \emph{Salix}-galler and galler-natural enemy paris with different numbers of observed co-occurrences ($n$) and no observed interactions ($k=0$). Both sets of intervals rely on prior information from the network in~\citet{Barbour2016,Barbour2016Dryad}.
+
+      % # R code to make the table:
+      % output=matrix(nrow=length(ns),ncol=5)
+      % ns=c(0,1,2,5,10,15,20,25,50,100,150,200,374)
+      % output[,1]=ns
+      % for(r in 1:nrow(output)){
+      %   interval1=credible_interval(calculate_parameters(sg_int_probs,ns[r],0),0.025,0.975)    
+      %   interval2=credible_interval(calculate_parameters(gp_int_probs,ns[r],0),0.025,0.975)    
+      %   output[r,2:3]=interval1
+      %   output[r,4:5]=interval2
+      % }
+
+        \begin{tabular}{l  c c  c c }
+        \multirow{2}{*}{$n$} & \multicolumn{2}{c}{\emph{Salix}-galler} & \multicolumn{2}{c}{galler-natural enemy}\\
+         & Lower bound & Upper bound \\
+        \hline
+        0   & 0.152 & 0.931 & 0.008 & 0.364 \\
+        1   & 0.110 & 0.843 & 0.007 & 0.337 \\
+        2   & 0.087 & 0.760 & 0.006 & 0.313 \\
+        5   & 0.053 & 0.573 & 0.005 & 0.258 \\
+        10  & 0.033 & 0.400 & 0.004 & 0.200 \\
+        15  & 0.023 & 0.306 & 0.003 & 0.163 \\
+        20  & 0.018 & 0.247 & 0.003 & 0.137 \\
+        25  & 0.015 & 0.208 & 0.002 & 0.119 \\
+        50  & 0.008 & 0.115 & 0.001 & 0.071 \\
+        100 & 0.004 & 0.061 & 0.001 & 0.039 \\
+        150 & 0.003 & 0.041 & \textless0.001 & 0.027 \\
+        200 & 0.002 & 0.031 & \textless0.001 & 0.021 \\
+        \hline
+        374 & 0.001 & 0.017 & \textless0.001 & 0.011 \\
+        \hline
+        \end{tabular}
+
+  \caption{Calculating the credible interval around a probability estimate}
   \label{box2}
 \end{floatbox}
 
