added a couple refs

--- a/manuscript/CI_interactions.tex
+++ b/manuscript/CI_interactions.tex
@@ -71,6 +71,8 @@ Link\"{o}ping, Sweden\\
   % Can be up to 200 words. This is 200 exactly.
   % Word count can be up to 7500, we're at about 5700 without the boxes. Should be grand.
 
+\linenumbers
+\begin{spacing}{2.0}
 \section*{Introduction}
 
     Representating an assemblage of species as a network offers a convenient summary of how the community is constructed as it simultaneously accounts for species composition and interactions between species. A tabulation of the nodes (species) and their relative abundances forms the basis for traditional metrics of community composition. To move from these simpler metrics to a network framework, the tabulation of nodes is combined with interactions (links between nodes) so that networks provide additional, higher-order information on community structure. While this additional information is useful (as, for example, interactions can affect changes in species abundances over time), empirical descriptions of ecological networks are still limited because they are usually considered to be static representations of the communities and interactions they describe. That is, whether the network is assembled based on aggregated data, a single intensive ``snapshot" sample, or expert knowledge, interactions are assumed to occur deterministically wherever and whenever the community is observed~\citep{Olesen2011a}. 
@@ -100,7 +102,7 @@ Link\"{o}ping, Sweden\\
 
     \subsection*{Process uncertainty} 
 
-    Even when an interaction is feasible, i.e. $L=1$, it may not occur at a given location or moment in time because of local constraints such as inclement weather or the lack of suitable habitat. We define the realisation of the interaction process with the variable $X$, given that the interaction is feasible, as a stochastic process with associated probability $P(X|L)=\chi$. This phenomenon of interaction contingencies is usually not considered in network studies, but there is a rich literature in community ecology about the contingencies of interactions. Phenological matching~\citep{MillerRushing2010,Gezon2016}, species preferences~\citep{Pires2011,Novak2015,Coux2016}, and fear effects of other species~\citep{Luttbeg2005,Wirsing2007} are just some of the factors contributing to variation in the frequency of interactions between a given pair of species.
+    Even when an interaction is feasible, i.e. $L=1$, it may not occur at a given location or moment in time because of local constraints such as inclement weather or the lack of suitable habitat. We define the realisation of the interaction process with the variable $X$, given that the interaction is feasible, as a stochastic process with associated probability $P(X|L)=\chi$. This phenomenon of interaction contingencies is usually not considered in network studies, but there is a rich literature in community ecology about the contingencies of interactions. Phenological matching~\citep{MillerRushing2010,Gezon2016}, species preferences~\citep{Pires2011,Novak2015,Coux2016}, and fear effects of other species~\citep{Luttbeg2005,Wirsing2008} are just some of the factors contributing to variation in the frequency of interactions between a given pair of species.
     % We imagine for instance that an interaction between a gall and a parasitoid might not be recorded at a location because it was the wrong time of the year and the gall had not yet formed (phenological constraints), a late frost killed the larvae (an abiotic environmental constraint), another parasitoid species competitively excluded the parasitoid species of interest (a biotic environmental constraint) or simply the parasitoid is too rare to interact with all of its viable hosts (an abundance constraint). 
 
     \subsection*{Detection uncertainty} 
@@ -158,7 +160,7 @@ Link\"{o}ping, Sweden\\
         \label{theta_MLE}
       \end{equation}
 
-  The variance of a Bernoulli experiment is $n\lambda$(1-$\lambda$). It is important to remember that this variance describes the variability of the number of successes $k$ for $n$ trials and is not the variance associated with the estimation of $\lambda$. Given this variance, it is possible to compute the confidence interval for the MLE of $\lambda$ using any of several methods, including the \emph{Wilson score interval}, the \emph{Clopper-Pearson interval}, and the \emph{Agresti-Coull Interval} (for details, see [\citealp{}]). Finding this estimate is therefore quite straightforward, but it nonetheless has two drawbacks. First, $\lambda$ is not a single point estimate but rather a random variable with a given uncertainty, the distribution of which is unknown. This means that even if $k = 0$ in a given sample, this does not necessarily imply that the two species will never interact. Rather, $k = 0$ implies that `no interaction' is the most likely outcome when the species do co-occur but there is nonetheless a substantial chance that the two species \emph{could} interact. In the situation where $k>0$, in contrast, we are sure that the interaction is feasible ($L = 1$) but still cannot be sure of the cause if the interaction is not observed at some sites/times (i.e., we cannot say why $k<n$). There may be local constraints ($X=0$) or we might simply not observe the interaction in every sample ($D<1$). 
+  The variance of a Bernoulli experiment is $n\lambda$(1-$\lambda$). It is important to remember that this variance describes the variability of the number of successes $k$ for $n$ trials and is not the variance associated with the estimation of $\lambda$. Given this variance, it is possible to compute the confidence interval for the MLE of $\lambda$ using any of several methods, including the \emph{Wilson score interval}, the \emph{Clopper-Pearson interval}, and the \emph{Agresti-Coull interval} (for details, see [\citealp{Brown2001}]). Finding this estimate is therefore quite straightforward, but it nonetheless has two drawbacks. First, $\lambda$ is not a single point estimate but rather a random variable with a given uncertainty, the distribution of which is unknown. This means that even if $k = 0$ in a given sample, this does not necessarily imply that the two species will never interact. Rather, $k = 0$ implies that `no interaction' is the most likely outcome when the species do co-occur but there is nonetheless a substantial chance that the two species \emph{could} interact. In the situation where $k>0$, in contrast, we are sure that the interaction is feasible ($L = 1$) but still cannot be sure of the cause if the interaction is not observed at some sites/times (i.e., we cannot say why $k<n$). There may be local constraints ($X=0$) or we might simply not observe the interaction in every sample ($D<1$). 
 
 
   Second, where the number of samples $n$ is very low (some pairs of species may never have been documenting as co-occurring), there will be considerable uncertainty around our estimate of $\lambda$. In Fig.~\ref{upper_limits} and Box~\ref{box2}, we derive the Clopper-Pearson interval to explore how the estimate of $\lambda$ varies with sample size. At a small sample size, the 95\% confidence interval spans all values of $\lambda$. To establish that species are not interacting with any acceptable certainty requires tens of observations of the two species co-occurring but not interacting. As most data sets will lack such extensive sampling across all species pairs, we can use a Bayesian approach to supplement what data we do have with other sources of information.
@@ -399,13 +401,13 @@ Link\"{o}ping, Sweden\\
 
 \section*{Conclusions/recommendations}
 
-  Real interaction networks vary~\citep{}, and to capture this variation we must turn from static descriptions of network structure to probabilistic descriptions. In this study, we have developed the analytical tools to capture the uncertainty in the estimation of pairwise interactions, and to partition it into its individual components: interaction uncertainty, process uncertainty and detection uncertainty. The patters unveiled offer tangible recommendations for improved descriptors of ecological interactions. First, our analyses point to detection uncertainty as a major contributor to overall uncertainty of is establishing the absence of interaction. To counter these establish the true absence of interactions will then require comparatively large sample size – on the order of 30-50 observations per species pair. Second, where such extensive sampling is not feasible, researchers should still acknowledge the varying levels of confidence surrounding the presence or absence of interactions between different pairs of species. Including the $n$ and $k$ values for each interaction will clearly indicate which unobserved interactions are most likely to be observed with further sampling and which estimates are more reliable. Third, the uncertainty around interactions (especially interactions that were not observed) should be incorporated in calculations of network properties like connectance or nestedness. Re-sampling networks based on a probabilistic understanding of networks is straightforward and gives distributions for network properties rather than point estimates. This not only acknowledges the fact that interactions vary over time and space and with different sampling effort and methodology but will also facilitate comparisons between networks. With confidence intervals around network metrics, we can not only say that one network is more connected than another but also whether the networks are more different than we would expect based on imperfect sampling of interactions. To facilitate these recommendations, we provide all code used in this paper in the supplementary material. 
+  Real interaction networks vary~\citep{Kitching1987,Olesen2011a,Pires2011a,Baiser2012,Fodrie2015,Novak2015}, and to capture this variation we must turn from static descriptions of network structure to probabilistic descriptions. In this study, we have developed the analytical tools to capture the uncertainty in the estimation of pairwise interactions, and to partition it into its individual components: interaction uncertainty, process uncertainty and detection uncertainty. The patters unveiled offer tangible recommendations for improved descriptors of ecological interactions. First, our analyses point to detection uncertainty as a major contributor to overall uncertainty of is establishing the absence of interaction. To counter these establish the true absence of interactions will then require comparatively large sample size – on the order of 30-50 observations per species pair. Second, where such extensive sampling is not feasible, researchers should still acknowledge the varying levels of confidence surrounding the presence or absence of interactions between different pairs of species. Including the $n$ and $k$ values for each interaction will clearly indicate which unobserved interactions are most likely to be observed with further sampling and which estimates are more reliable. Third, the uncertainty around interactions (especially interactions that were not observed) should be incorporated in calculations of network properties like connectance or nestedness. Re-sampling networks based on a probabilistic understanding of networks is straightforward and gives distributions for network properties rather than point estimates. This not only acknowledges the fact that interactions vary over time and space and with different sampling effort and methodology but will also facilitate comparisons between networks. With confidence intervals around network metrics, we can not only say that one network is more connected than another but also whether the networks are more different than we would expect based on imperfect sampling of interactions. To facilitate these recommendations, we provide all code used in this paper in the supplementary material. 
 
 
 
   % [Here we need to be very hands-on and remember the invitation letter form Ecol Letters:
   % As a contribution primarily to methodology, the manuscript will not be considered for ``Ideas \& Perspectives". (Please recall my message concerning your past presubmission inquiry.) However, Ecology Letters is entertaining the idea of a new section for ``Novel Methods". As we have not advertised this, I would ask you to keep that information in confidence. If acceptable to an Associate Editor and reviewers, your paper could be the first, or one of the first, contributions to this new section. Accordingly, the work would be subject to considerable scrutiny and I would urge you to make the paper as strong as you can. This would include demonstrating the need for this new method (i.e. outlining how this is different than other approaches currently in use and how they fail at some important task), documenting the robustness and accuracy of the approach, performing case study, and making robust high-quality code freely available.]
-
+\end{spacing}
 
 \section*{Boxes and figures}
 
